<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="app_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>

    <string name="facebook_app_id">311473977462820</string>
    <string name="fb_login_protocol_scheme">fb311473977462820</string>
    <string name="google_maps_key" translatable="false">AIzaSyDUgzpnzy73hWZYbH24UO0_Pkfoks3bdBE</string>
    <string name="google_maps_key22" translatable="false">AIzaSyDUgzpnzy73hWZYbH24UO0_Pkfoks3bdBE</string>


    // Navigation
    // Destination short
    <string name="map_view_link">Map View</string>
    <string name="list_restaurants_link">List View</string>
    <string name="list_workmates_link">Workmates</string>

    // Destination long
    <string name="map_view_desc">Restaurants map</string>
    <string name="list_restaurants_desc">Restaurants list</string>
    <string name="list_workmates_desc">Available workmates</string>

    // Toolbar
    <string name="item_search">Search</string>
    <string name="item_order">Order list</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="order_name">Order by name</string>
    <string name="order_distance">Order by distance</string>
    <string name="order_rating">Order by rates</string>

    // Nav drawer
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    //All
    <string name="num_workmates">(%d)</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="distance_meters" translatable="false">%d m</string>
    <string name="distance_kms" translatable="false">%.2f km</string>
    <string name="back_to_main">Go back to the list of restaurants</string>

    //MainActivity
    <string name="no_restaurant">You have not picked your restaurant yet</string>


    //Login Activity


    //list_workmates
    <string name="restaurant_chosen">%1$s eats at %2$s</string>
    <string name="restaurant_chosen2">%s will be there !</string>

    //Detail activity
    <string name="fab_choose_restaurant">Choose this restaurant</string>
    <string name="give_rate">What do you think of this restaurant?</string>
    <string name="no_phone">No phone number registered</string>
    <string name="no_website">No website registered</string>
    <string-array name="rates">
        <item>Just correct</item>
        <item>Good</item>
        <item>Wonderful</item>
    </string-array>
    <string name="rate_registered">Your rate has been registered</string>
    <string name="btn_call">CALL</string>
    <string name="btn_website">WEBSITE</string>
    <string name="btn_like">LIKE</string>


    //Permissions
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="notification_channel_id">MyCanal</string>
    <string name="notification_channel_title">MyTitle</string>
    <string name="notification_channel_desc">MyDesc</string>

    // Settings
    <string name="receive_notifications">Receive notification at noon</string>

    // Notif
    <string name="noon_goto">It\'s noon. It\'s time to go to the restaurant  %s</string>
    <string name="desc_chanel">Reminder for the restaurant chosen</string>
    <string name="title_chanel">Noon</string>

</resources>